# zabob

./: .gitattributes  test_direct_import.py  test_fastmcp_import.py  test_hython_import.py  test_hython_imports.py  test_hython_server_import.py  test_node_load_import.py
docs/.cspell/: workspace.txt
houdini/h20.5/: pyproject.toml  start_mcp_server.sh  test.hipnc  test_imports.py  test_node_load.py  test_simple.py
houdini/h20.5/src/zabob/h20_5/: chain_detection.py  code_generation.py  houdini_mcp_server.py  hython_mcp_server.py  node_load.py  node_load_modular.py  node_load_original_backup.py  node_loader.py  node_references.py  parameter_extraction.py  static.py  test_modular.py  topological_sort.py
houdini/zcommon/src/zabob/common/: __init__.py  common_utils.py  hython.py
mcp-server/: SQL_QUERY_ANALYSIS.md  test_hython_integration.py  test_hython_subprocess.py
mcp-server/src/zabob/mcp/: database.py  server.py
zabob-chat/: package.json  pnpm-lock.yaml
zabob-modules/: pnpm-lock.yaml
